--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,10 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Initial Catalog=Prompts;Persist Security Info=True;User ID=SA;Password=PromptTest2024;TrustServerCertificate=True"
   }
 }
+
